--- a/styles/style.css
+++ b/styles/style.css
@@ -1,8 +1,20 @@
 
+form{
+  display: flex;
+  flex-direction: column;
+  padding: 40px;
+}
+form label{
+  margin-top: 5px;
+}
 footer{
   display: flex;
   flex-direction: row;
 }
 footer div{
  margin-right: 30px;
+}
+
+.button-container{
+  margin-top: 5px;
 }
