Adicionado função de saque

--- a/styles/style.css
+++ b/styles/style.css
@@ -24,3 +24,9 @@ footer div{
   font-size: 30px;
   font-weight: bold;
 }
+
+#dados-conta{
+  color: green;
+  font-size: 30px;
+  font-weight: bold;
+}
